# wnba-analytics-engine

./: .env.example  .gitignore  DATA_INVENTORY.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
db/init/: 001-create-test-db.sql
db/migrations/: 0001_canonical_entities.sql  0002_box_scores.sql  0003_market_price_snapshots.sql  0004_game_season_type.sql  0005_injury_reports.sql  0006_player_advanced_stats.sql  0007_market_snapshot_player_id.sql  0008_game_plays.sql  0009_shot_zone_stats.sql  0010_team_is_franchise.sql  0011_player_bio.sql  0012_team_advanced_stats.sql  0013_standings.sql  0014_balldontlie_odds.sql  0015_standings_history.sql  0016_balldontlie_injury_reports.sql  0017_season_awards.sql  0018_game_venue_attendance.sql  0019_game_officials.sql  0020_player_transactions.sql  0021_odds_api_game_scores.sql
tests/: conftest.py
tests/fixtures/: balldontlie_games.json  balldontlie_odds.json  balldontlie_player_advanced_stats.json  balldontlie_player_advanced_stats_bio.json  balldontlie_player_injuries.json  balldontlie_player_prop_odds.json  balldontlie_player_shot_zones.json  balldontlie_player_shot_zones_bio.json  balldontlie_player_stats.json  balldontlie_players.json  balldontlie_plays.json  balldontlie_standings.json  balldontlie_team_advanced_stats.json  balldontlie_team_shot_zones.json  balldontlie_team_stats.json  espn_injuries.json  espn_scoreboard.json  espn_scoreboard_allstar.json  espn_summary.json  espn_summary_with_game_info.json  (+9 more)
wnba_engine/: __init__.py  config.py  errors.py  http_client.py  parsing.py
(+143 files in other folders)
