[project]
name = "wnba-engine"
version = "0.1.0"
description = "Open WNBA data & analytics engine: box scores, player stats, and odds/outcomes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "psycopg[binary,pool]>=3.1",
  "click>=8.1",
  "tenacity>=8.2",
]

[project.scripts]
wnba-engine = "wnba_engine.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wnba_engine"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a reachable Postgres (docker compose up -d); skips otherwise",
]
